# opensearch-rag-pipeline

./: .dockerignore  .env.example  .env.production.template  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  dataworks_deployment.md  docker-compose.yml  pyproject.toml  requirements.txt  scratch.py  一期模型评测集和评测模板_v2.0(1).xlsx
.claude/: launch.json
archive/: README.md  recover.py
card_templates/: README.md  native_feedback_card.json  native_feedback_card.md  streaming_rag_feedback_card.json
console-app/: .gitignore  components.json  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
dataworks_nodes/: move_files_to_admin.py  ops_health_monitor_node.py  register_new_files.py  retention_node.py  scan_oss_sync_keys.py  stage1_node.py  stage2_node.py  stage3_node.py
deploy/: com.fuling.ops-monitor.plist  com.fuling.qa-rollup.plist  com.fuling.qa-weekly-report.plist  dataworks_monitor.Dockerfile  eval_release_gate.sh  run_ops_monitor.sh  weekly_qa_report.py
docs/: architecture.md  architecture_quality_review_2026-07-01.md  cleanup_manifest_20260610.json  corpus_cleanup_worklist.md  dedup_families_preview.md  dingtalk-miniapp-design.md  dingtalk_card_template.md  dingtalk_streaming_card.md  environment_design.md  eval_release_gate.md  eval_release_gate_DRAFT.md  feedback_badcase_report.md  ha3-dense-fix-plan.md  ha3-dense-fix-support-ticket.md  ha3_stg_table_spec.md  judge_calibration_DRAFT.md  local_eval_env.md  metrics_writer_account_DRAFT.md  ops_monitoring_schedule.md  perf_optimization_backlog.md  pipeline-robustness-and-content-hashing.md  quarantine_ingestion_readiness.md  retrieval_consistency_plan.md  v2-table-create-console.md
eval_harness/: README.md  __init__.py  baseline.py  budget_ab.py  chunker_ab.py  chunker_ab_worker.py  envboot.py  gate_calibration.py  gen_nothink.py  ha3live.py  judge.py  judge_calibration.py  judge_panel_workflow.js  l6_ab.py  matching.py  metrics.py  mm_answer_metrics.py  multi_doc_ab.py  recalibrate.py  report.py  rerank_ab.py  run_eval.py  run_judge.py  run_manifest.py  sampling.py
fuling-rag-miniapp/: README.md  app.acss  app.js  app.json  ding.config.json  package.json
opensearch_pipeline/: __init__.py  access_grants.py  alerting.py  allowed_depts_reconcile.py  answer_flow.py  api.py  audit_log.py  auth_token.py  bulk_helpers.py  chunker.py  clients.py  config.py  content_blocks_builder.py  contribution.py  dag_definitions.py  dag_engine.py  dataworks_orchestrator.py  db.py  dingtalk_bot.py  dingtalk_card.py  dingtalk_identity.py  dingtalk_stream_runner.py  embedding_client.py  env_guard.py  feedback_handler.py  ha3_reconcile.py  ha3_verify.py  http_session.py  image_binding_reconcile.py  image_funnel_processor.py  ingest_policy.py  ingestion_resume.py  kb_authz.py  kb_upload.py  llm_generator.py  ops_monitor.py  oss_url.py  pii_patterns.py  pipeline_nodes.py  pipeline_run.py  (+19 more)
reports/: .weekly_report_print.html  富岭RAG周报_2026-06-08至06-12.md
schema/: 001_opensearch_pipeline.sql  002_feedback_system.sql  002_step_card_enhancement.sql  003_provenance_lineage.sql  003_user_role_unique.sql  004_observability_metrics.sql  005_cross_doc_dedup_index.sql  006_conversation_history.sql  006_kb_admin_authz.sql  007_kb_etag_dedup_index.sql  008_kb_access_request.sql  009_acl_projection_outbox.sql  010_kb_contribution.sql  011_schema_migrations.sql  012_qa_session_log_perf_index.sql  README.md
scratch/: diag_stream_realistic.py  full_eval.py  (+2 more)
(+509 files in other folders)
