[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opensearch-rag-pipeline"
version = "0.1.0"
description = "Enterprise knowledge base pipeline: document extraction → chunking → OpenSearch indexing"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "pypdf>=4.0",
    "pdfplumber>=0.11",     # PDF 版面/文本提取（pdf_extractor 主路径）
    "python-docx>=1.0",
    "python-pptx>=0.6",     # PPTX 提取（_extract_pptx）— 漏声明致 DataWorks pptx 静默空抽
    "openpyxl>=3.1",
    "requests>=2.31",
]

[project.optional-dependencies]
ocr = [
    "PyMuPDF>=1.24",       # fitz: PDF → image for OCR
]
production = [
    "pymysql>=1.1",
    "DBUtils>=3.0",
    "opensearch-py>=2.4",
    "oss2>=2.18",
    "dashscope>=1.14",
    "alibabacloud-ha3engine-vector>=1.1.18",
    "dingtalk-stream>=0.24",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "httpx>=0.27",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
rag-pipeline = "opensearch_pipeline.run_simulation:main"
rag-api = "opensearch_pipeline.api:main"

[tool.setuptools.packages.find]
include = ["opensearch_pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"
