[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opensearch-rag-pipeline"
version = "0.1.0"
description = "Enterprise knowledge base pipeline: document extraction → chunking → OpenSearch indexing"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "pypdf>=4.0",
    "pdfplumber>=0.11",     # PDF 版面/文本提取（pdf_extractor 主路径）
    "python-docx>=1.0",
    "python-pptx>=0.6",     # PPTX 提取（_extract_pptx）— 漏声明致 DataWorks pptx 静默空抽
    "openpyxl>=3.1",
    "requests>=2.31",
]

[project.optional-dependencies]
ocr = [
    "PyMuPDF>=1.24",       # fitz: PDF → image for OCR
]
production = [
    "pymysql>=1.1",
    "DBUtils>=3.0",
    "opensearch-py>=2.4",
    "oss2>=2.18",
    "dashscope>=1.14",
    "alibabacloud-ha3engine-vector>=1.1.18",
    "dingtalk-stream>=0.24",
    "jieba>=0.42",          # 中文分词：image_relation_classifier（chunker DAG2 图文关系分类）顶层依赖；
                            #   chunker 以 try/except 容灾降级，但生产链路启用该特性需安装，故归 production
    "Pillow>=10.0",         # PIL：image_funnel_processor.py 顶层 `from PIL import Image`（生产 VLM 图片漏斗，
                            #   DAG1 抽取）；此前仅靠传递依赖存在，显式声明消除隐式依赖
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "httpx>=0.27",
    "numpy>=1.24",          # 仅 DAG4 模拟检索(eval，未接入生产) + tests/eval + test_live_similarity 用
    "rank-bm25>=0.2",       # 仅 DAG4 模拟检索(node_simulate_retrieval, eval，未接入生产) + tests/eval 用
    "python-dotenv>=1.0",   # config._load_env_files 以 try/except 可选加载 .env（生产由 SAE/DataWorks 注入环境变量，
                            #   不需此包）；测试(test_gemini_classification/test_dashscope_emb)直接 import，故归 dev
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
rag-pipeline = "opensearch_pipeline.run_simulation:main"
rag-api = "opensearch_pipeline.api:main"

[tool.setuptools.packages.find]
include = ["opensearch_pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"
